# minio-manager

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  Containerfile  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-pdm-env/: action.yaml
.github/workflows/: docker-publish.yml  main.yaml  on-release-main.yaml
configuration/: index.html
docs/: configuration.md  index.md  modules.md  resources.md  setup.md  usage.md
examples/: .gitlab-cy.yaml  bucket-group-user-policy.json  minio-manager-policy.json  my_service_account_policy.json  pipeline.sh  service-account-policy-base.json
examples/lifecycle_policies/: alternative_lifecycle.json
examples/my_cluster/my_group/: .env
examples/my_cluster/my_group/lifecycle_policies/: my_lifecycle.json
examples/my_group/: .env  resources.yaml  secrets-insecure.yaml
examples/my_group/user_policies/: my_user.json
examples/user_policies/: my_user.json
minio_manager/: __init__.py  __main__.py  app.py  bucket_handler.py  classes.py  clients.py  cluster_handler.py  config.py  errors.py  mc_wrapper.py  minio_secrets.py  nextcloud.py  policy_handler.py  resource_handler.py  secret_manager.py  service_account_handler.py  user_handler.py  utilities.py
minio_manager/classes/: client_manager.py  config.py  controller_user.py  errors.py  logging_config.py  mc_wrapper.py  minio.py  minio_resources.py  resource_parser.py  secrets.py  settings.py
minio_manager/classes/resources/: bucket.py  service_account.py
minio_manager/resources/: policies.py  service-account-policy-base.json
modules/: index.html
resources/: index.html
search/: search_index.json
setup/: index.html
tests/: test_app.py  test_foo.py
tests/resources/: config.yaml  local-test.yaml  test-bucket-policy.json  test-iam-policy.json
usage/: index.html
