[project]
name = "minio-manager"
dynamic = ["version"]
description = "Declare what MinIO buckets, IAM policies, ILM policies you want, and let MinIO Manager do the work."
authors = [
    {name = "Alwyn Kik", email = "alwyn@kik.pw"},
]
readme = "README.md"
packages = [
  {include = "minio_manager"}
]
requires-python = ">=3.11"
dependencies = [
    # Temporary until https://github.com/minio/minio-py/pull/1480 is released
    "minio @ git+https://github.com/Alveel/minio-py@allow-specifying-policy-as-dict",
    "pykeepass>=4.0.6",
    "pyyaml>=6.0.1",
    "deepdiff[optimize]>=6.7.1",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.4",
]
license = {text = "MIT license"}
keywords = ['minio', 's3', 'declarative']

[project.scripts]
minio-manager = "minio_manager.app:main"

[project.urls]
Homepage = "https://alveel.github.io/minio-manager/"
Repository = "https://github.com/alveel/minio-manager"
Documentation = "https://alveel.github.io/minio-manager/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']
preview = true

[tool.deptry.per_rule_ignores]
DEP002 = ["pykeepass"]

[tool.mypy]
files = ["minio_manager"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # raise-vanilla-args
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["minio_manager"]

[tool.pdm.version]
source = "scm"
fallback_version = "dev"

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0"
  ]
dev = [
    "deptry>=0.12.0",
    "mypy>=0.981",
    "pre-commit>=2.20.0",
    "tox>=3.25.1",
    "black[d]>=23.11.0",
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.19.0"
]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "."
includes = ["minio_manager"]
